--- a/src/app/baner/baner.component.html
+++ b/src/app/baner/baner.component.html
@@ -13,6 +13,6 @@
 
     <div class="profile">
         <div class="profile-bg"></div>
-        <img src="assets/Sundar-Pichar-Profile-Square.png" alt="">
+        <img src="assets/profile-pic.png" alt="">
     </div>
 </div>
